# api/openAPISpec.yml
@@ -3,6 +3,11 @@ info:
   title: Auth-service sut lk
   version: 0.0.1
 servers:
+  - url: http://localhost:{port}/
+    description: Local host for testing
+    variables:
+      port:
+        default: "8080"
   - url: http://localhost:{port}/api/{version}/auth
     description: Default local host for testing
     variables:
@@ -39,8 +44,8 @@ paths:
                   password:
                     type: string
                 example:
-                  email: "example@some.some"
-                  password: "secret"
+                  email: "example@example.com"
+                  password: "password"
       responses:
         "200":
           description: Return Access and Refresh tokens
@@ -50,6 +55,10 @@ paths:
                 $ref: "#/components/schemas/tokens"
         "401":
           description: Email or password are incorrect
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/err_msg"
   /refresh:
     post:
       summary: Refresh access token
@@ -60,10 +69,10 @@ paths:
             schema:
               type: object
               properties:
-                refresh-token:
+                refresh_token:
                   type: string
               example: 
-                refresh-token: <refresh jwt token>
+                refresh_token: <refresh jwt token>
       responses:
         "200":
           description: Return Access and Refresh tokens
@@ -72,45 +81,65 @@ paths:
               schema:
                 $ref: "#/components/schemas/tokens"
         "401":
-          description: Bad refrash token
+          description: Bad refresh token
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/err_msg"
   /logout:
     post:
       summary: Will brake all created access and refresh tokens
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               type: object
               properties:
-                access-token:
+                access_token:
                   type: string
               example:
-                schema:
-                  access-token: <access-token>
+                  access_token: <access_token>
       responses:
         "200":
           description: All tokens had been expired
-        default:
-          description: Message with error
+        "400":
+          description: Something went wrong
           content:
-            applicatiob/json:
+            application/json:
               schema:
+                $ref: "#/components/schemas/err_msg"
+  /checktoken:
+    post:
+      summary: Validating JWT token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:  
                 type: object
                 properties:
-                  code:
-                    type: integer
-                  msg:
+                  token:
                     type: string
-                example:
-                  code: 404
-                  msg: Not found
+      responses:
+        "200":
+          description: Token is valid
+        "400":
+          description: Token is invalid
 
 components:
   schemas:
     tokens:
       type: object
       properties:
-        access-token:
+        access_token:
           type: string
-        refresh-token:
+        refresh_token:
+          type: string
+    err_msg:
+      type: object
+      properties:
+        code: 
+          type: integer
+        msg:  
           type: string
